# RelayBoard

./: README.md  Specyfikacja protokołu.txt
caly program/: SterowanieListwa.INI  SterowanieListwa.bpr  SterowanieListwa.cpp  SterowanieListwa.prz  SterowanieListwa.res  Unit2.cpp  Unit2.dfm  Unit2.h  Unit3.cpp  Unit3.dfm  Unit3.h  about.cpp  about.dfm  about.h  hash.cpp  hash.h  main.cpp  main.dfm  main.h  soc.cpp
klient sterowanie/: Klient_SterowanieListwa.bpr  Klient_SterowanieListwa.cpp  Klient_SterowanieListwa.tds  main.cpp  main.dfm  main.h  soc.cpp  soc.h
linux/: CMakeLists.txt  crc.c  crc.h  main.c  main.h
